<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project_wow</string>
    <string name="title_activity_main">Project_wow</string>
    <string name="action_settings">Settings</string>
    <string name="introduce_user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="login_error">Wrong Credentials! Please try again!</string>
    <string name="connection_problem">There seems to be a problem with the Internet, Please check your connection status!</string>
    <string name="empty_input">Please, fill the input.</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="title_repos">Repositories</string>
    <string name="title_branches">Branches</string>
    <string name="title_commits">Commits</string>
    <string name="title_notepad">Notepad</string>
    <string name="title_settings">Settings</string>
    <string name="title_timer">Timer</string>
    <string name="timerStart">Start</string>
    <string name="titleReset">Reset</string>
    <string name="title_activity_updates">UpdatesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_notes">There are no Notes yet!</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="edit_confirm">Done</string>
    <string name="edit_note">Edit Note</string>
    <string name="api_key">e01be97648f84ce72522bb58b69dbe95af5cb94d</string>
    <string name="title_logout">Log out</string>
    <string name="button_show_files">View modified files</string>
    <string name="diff_title">DIfferences</string>

    <!-- Macros for the notepad -->
    <string name="macro_prefix">m_</string>
    <string name="m_nf">new file</string>
    <string name="m_df">deleted file</string>
    <string name="m_bf">bug fix</string>
    <string name="macros">Macros</string>
    <string name="shortcut">Shortcut</string>
    <string name="result">Result</string>
    <string name="add_macro">Add macro</string>
    <string name="add">Add</string>
    <string name="not_valid_macro">Shortcut have to contain exactly two characters. Result cannot be empty.</string>
    <string name="add_macro_title">Add macro</string>
    <string name="defined_macros">Defined macros</string>
    <string name="title_activity_timer_test">TimerTest</string>
    <string name="hello_world">Hello world!</string>

</resources>
